// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestionsList should initially render component correctly 1`] = `
<div>
  <li
    class="ListItem"
  >
    <span>
      Sun
    </span>
  </li>
  <li
    class="ListItem ListItem--isHighlighted"
  >
    <span>
      Moon
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Mercury
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Venus
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Earth
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Mars
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Jupiter
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Saturn
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      Neptune
    </span>
  </li>
  <li
    class="ListItem ListItem--disabled"
  >
    <span>
      Pluto
    </span>
  </li>
</div>
`;

exports[`SuggestionsList should render isLoading state 1`] = `
<div>
  <li
    class="ListItem"
  >
    <div
      class="SuggestionsList__loaderItem"
      role="listitem"
    >
      <div
        aria-label="Loading"
        class="ContentPlaceholder"
        role="alert"
        style="animation-duration: 1s;"
      >
         
        <div
          class="ContentPlaceholder__mask"
          role="presentation"
          style="width: 0%;"
        />
      </div>
    </div>
  </li>
  <li
    class="ListItem"
  >
    <div
      class="SuggestionsList__loaderItem"
      role="listitem"
    >
      <div
        aria-label="Loading"
        class="ContentPlaceholder"
        role="alert"
        style="animation-duration: 1s;"
      >
         
        <div
          class="ContentPlaceholder__mask"
          role="presentation"
          style="width: 0%;"
        />
      </div>
    </div>
  </li>
  <li
    class="ListItem"
  >
    <div
      class="SuggestionsList__loaderItem"
      role="listitem"
    >
      <div
        aria-label="Loading"
        class="ContentPlaceholder"
        role="alert"
        style="animation-duration: 1s;"
      >
         
        <div
          class="ContentPlaceholder__mask"
          role="presentation"
          style="width: 0%;"
        />
      </div>
    </div>
  </li>
  <li
    class="ListItem"
  >
    <div
      class="SuggestionsList__loaderItem"
      role="listitem"
    >
      <div
        aria-label="Loading"
        class="ContentPlaceholder"
        role="alert"
        style="animation-duration: 1s;"
      >
         
        <div
          class="ContentPlaceholder__mask"
          role="presentation"
          style="width: 0%;"
        />
      </div>
    </div>
  </li>
  <li
    class="ListItem"
  >
    <div
      class="SuggestionsList__loaderItem"
      role="listitem"
    >
      <div
        aria-label="Loading"
        class="ContentPlaceholder"
        role="alert"
        style="animation-duration: 1s;"
      >
         
        <div
          class="ContentPlaceholder__mask"
          role="presentation"
          style="width: 0%;"
        />
      </div>
    </div>
  </li>
</div>
`;

exports[`SuggestionsList should render optimization list correctly 1`] = `
<div>
  <div
    class="SuggestionsList__optimizerWrapper"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-label="grid"
        aria-readonly="true"
        class="ReactVirtualized__Grid ReactVirtualized__List"
        role="grid"
        style="box-sizing: border-box; direction: ltr; height: 0px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
        tabindex="0"
      />
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`SuggestionsList should run suggestionItemRenderer function correctly 1`] = `
<div>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem ListItem--isHighlighted"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem"
  >
    <span>
      some item text
    </span>
  </li>
  <li
    class="ListItem ListItem--disabled"
  >
    <span>
      some item text
    </span>
  </li>
</div>
`;
